--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -109,6 +109,9 @@
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             {{ form.captcha }}
+                                            {% for error in form.captcha.errors %}
+                                            <p> {{ error}}
+                                                {% endfor %}
                                         </div>
                                     </div>
                                     
