--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -94,7 +94,7 @@
                                 
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="{% url 'transfer' %}" class="nav-link">
                                     Transfers
                                     <i class="fas fa-angle-down"></i>
                                 </a>
