--- a/transfer/templates/transfer/transfer_detail.html
+++ b/transfer/templates/transfer/transfer_detail.html
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="tour_details_boxed">
-                            <h3 class="heading_theme">Tours location</h3>
+                            <h3 class="heading_theme">Transfer Area</h3>
                             <div class="map_area">
                                 <iframe
                                     src="https://maps.google.com/maps?q={{ otour.long }},{{ otour.lat }}&hl=es;z=14&amp;output=embed">
