--- a/outbounds/templates/outbounds/outbounds-details.html
+++ b/outbounds/templates/outbounds/outbounds-details.html
@@ -132,7 +132,7 @@
                                                         <ul>
                                                             <li>
                                                                 <i class="fas fa-circle"></i>
-                                                                {{ itin.detail }}
+                                                                {{ itin.detail|linebreaksbr }}
                                                             </li>
                                                             
                                                             
