--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -101,7 +101,7 @@
                                 
                             </li>
                             <li class="nav-item">
-                                <a href="{% url 'hotels' %}" class="nav-link">
+                                <a href="" class="nav-link">
                                     Hotel
                                     <i class="fas fa-angle-down"></i>
                                 </a>
