--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -584,7 +584,7 @@ section {
 
 
 .flight_Search_boxed {
-    background: #8b3eea17;
+    background: #e4f6e2;
     padding: 10px 10px 10px 20px;
     border-radius: 10px;
     position: relative;
