--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -40,15 +40,15 @@
                                         <div class="row">
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                                                 <div class="flight_Search_boxed">
-                                                    <p>Destinations </p>
-                                                    <input type="text" placeholder="Find your desired City">
-                                                    <span>Outbounds</span>
+                                                    
+                                                    {{ outbounds_filter.form }}
+                                                    
                                                 </div>
                                             </div>
                                             
                                             
                                             <div class="top_form_search_button">
-                                                <button class="btn btn_theme btn_md">Search</button>
+                                                <button class="btn btn_theme btn_md" type="submit">Search</button>
                                             </div>
                                         </div>
                                     </form>
@@ -73,24 +73,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="">
                     <div class="left_side_search_area">
                         
-                        <div class="left_side_search_boxed">
-                            <div class="left_side_search_heading">
-                                <h5>Filter City</h5>
-                            </div>
-                            <div class="filter_review">
-                                <form class="review_star">
-                                    {{ outbounds_filter.form.as_p }}
-                                    <button class="btn btn_theme btn_md w-100 mt-3"  type="submit">Apply</button>
-                                </form>
-                            </div>
-                        </div>
                         
                     </div>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-12">
                     <div class="row">
                         {% for city in outbounds_filter.qs %}
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
