--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -48,7 +48,7 @@
                                             
                                             
                                             <div class="top_form_search_button">
-                                                <button class="btn btn_theme btn_md" type="submit">Search</button>
+                                                <button class="btn btn_theme btn_md" type="submit">Search City</button>
                                             </div>
                                         </div>
                                     </form>
