--- a/tour/templates/tour/tourdetails.html
+++ b/tour/templates/tour/tourdetails.html
@@ -172,32 +172,11 @@
                                                     <ul>
                                                         <li>
                                                             <i class="fas fa-circle"></i>
-                                                            There are many variations of passages of Lorem Ipsum
-                                                            available, but the majority have
-                                                            suffered alteration in some form
+                                                            {{ itin.detail }}
                                                         </li>
-                                                        <li>
-                                                            <i class="fas fa-circle"></i>
-                                                            Contrary to popular belief, Lorem Ipsum is not simply
-                                                            random
-                                                        </li>
-                                                        <li>
-                                                            <i class="fas fa-circle"></i>
-                                                            Many desktop publishing packages and web page editors
-                                                            now
-                                                            use
-                                                        </li>
-                                                        <li>
-                                                            <i class="fas fa-circle"></i>
-                                                            Lorem Ipsum is that it has a more-or-less normal
-                                                            distribution of letters, to using 'Content here
-                                                        </li>
-                                                        <li>
-                                                            <i class="fas fa-circle"></i>
-                                                            The standard chunk of Lorem Ipsum used since the 1500s
-                                                            is
-                                                            reproduced below for those interested.
-                                                        </li>
+                                                        
+                                                          
+                                                       
                                                     </ul>
                                                 </div>
                                             </div>
