--- a/frontend/templates/frontend/contact.html
+++ b/frontend/templates/frontend/contact.html
@@ -117,7 +117,7 @@
                                     
                                     <div class="col-lg-12">
                                         <div class="form-group">
-                                            <button id="contact-us" type="submit" class="btn btn_theme btn_md"> send message </button>
+                                            <button id="contact-us" type="submit" class="btn btn_theme btn_md w-100 mt-3"> send message </button>
                                         </div>
                                     </div>
                                     
