--- a/tour/templates/tour/tourdetails.html
+++ b/tour/templates/tour/tourdetails.html
@@ -59,7 +59,7 @@
                             </div>
                             <div class="tour_details_top_bottom_text">
                                 <h5>Duration</h5>
-                                <p>{{ tour.duration }}</p>
+                                <p>{{ tour.duration }}H</p>
                             </div>
                         </div>
                         <div class="toru_details_top_bottom_item">
