--- a/tour/templates/tour/booking-confirmation.html
+++ b/tour/templates/tour/booking-confirmation.html
@@ -88,6 +88,15 @@
                                         <h6 class="remove_coupon_tour">Total Amount <span></span> </h6>
                                     </div>
                                 </div>
+                                
+                            </div>
+                            <div class="tour_details_right_boxed">
+                                <div class="tour_details_right_box_heading">
+                                    <h3>Pay By Card </h3>
+                                </div>
+                                    <a href="{% url 'payment_view' %}" class="btn btn-dark btn_md w-100">Pay Now</a>
+                                </div>
+
                             </div>
                         </div>
                     </div>
