--- a/tour/templates/tour/tbookingForm.html
+++ b/tour/templates/tour/tbookingForm.html
@@ -154,7 +154,7 @@
                                 <div class="edit_date_form">
                                     <div class="form-group">
                                         <label for="dates">Edit Date</label>
-                                        <input name="tour_date" type="date" id="dates" value="2022-05-05" class="form-control">
+                                        <input name="tour_date" type="date" id="dates" class="form-control">
                                         <span>{% verbatim %} {{ BookingDate }} {% endverbatim %} </span>
                                     </div>
                                 </div>
