--- a/tour/templates/tour/all_tours_grid.html
+++ b/tour/templates/tour/all_tours_grid.html
@@ -93,9 +93,14 @@
                                             class="review_count">(1166
                                             reviewes)</span>
                                         </a></p>
-                                            {% for price in tour.price.all %}
-                                    <h3> {{ price.child_price | floatformat:0}}<sub> AED</sub> <span>Price starts from</span></h3>
-                                    {%endfor %}
+                                        {% if sharing_tour_price %}
+                                        
+                                            <h3>{{ sharing_tour_price.child_price|floatformat:0 }}<sub> AED</sub> <span>Price starts from</span></h3>
+                                       
+                                            {% endif %}
+                                        {% if private_tour_price %}
+                                        <p>Private Car: {{ private_tour_price.base_Price|floatformat:0  }}</p>
+                                        {% endif %}
                                 </div>
                             </div>
                         </div>
